--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" ng-app="wsi">
 <head>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
   <meta name="viewport" content="initial-scale=1" />
 </head>
-<body class="md-padding" >
+<body class="md-padding" style="font-family:Open sans;">
 
 
 <md-content class="md-padding" ng-controller="WsiCtrl">
@@ -14,6 +15,15 @@
 
 <div layout="row" flex="40">
 <div layout="column">
+
+    <md-input-container>
+      <label>Stock Ticker</label>
+      <input type="text" ng-model="ben.ticker">
+    </md-input-container>
+
+    <md-button class="md-raised md-primary" ng-click="getTickerData()">Get Data is avilable...</md-button>
+
+
     <md-input-container>
       <label>Market Cap</label>
       <input type="text" ng-model="ben.marketCap" required>
@@ -80,7 +90,7 @@
 
 </div>
 </md-content>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <!-- Angular Material Dependencies -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
