--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="wsi">
 <head>
-  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css">
+  <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
   <meta name="viewport" content="initial-scale=1" />
@@ -12,90 +12,135 @@
 <md-content class="md-padding" ng-controller="WsiCtrl">
 
 <h2>Stock Ratios</h2>
-
-<div layout="row" flex="40">
-<ng-form name="benForm" layout="column">
-
-    <md-input-container>
-      <label>Stock Ticker</label>
-      <input type="text" ng-model="ben.ticker" name="ticker" required>
-    </md-input-container>
-
-    <md-button class="md-raised md-primary" ng-click="getCompanyData()" ng-disabled="benForm.ticker.$invalid">Get Ticker Data</md-button>
-    <br/>
-    {{quote.Name}} {{quote.LastTradePrice}}
-    <br/>
-    <md-input-container>
-      <label>Market Cap</label>
-      <input type="text" ng-model="quote.MarketCapitalization" required>
-    </md-input-container>
-
+<div layout="column" style="min-width:400px;">
     <div layout="row">
-        <md-input-container>
-          <label>Current Ratio</label>
-          <input type="text" ng-model="ratios.currentRatio" required>
-        </md-input-container>
+        <ng-form name="benForm" layout="column">
 
-        <md-input-container>
-          <label>Long-term Debt Coverage Ratio</label>
-          <input type="text" ng-model="balance.longTermDebtCoverageRatio" required>
-        </md-input-container>
+            <md-input-container>
+              <label>Stock Ticker</label>
+              <input type="text" ng-model="ben.ticker" name="ticker" required>
+            </md-input-container>
+
+            <md-button class="md-raised md-primary" ng-click="getCompanyData()" ng-disabled="benForm.ticker.$invalid">Get Ticker Data</md-button>
+        </ng-form>
     </div>
 
     <div layout="row">
-        <md-input-container>
-          <label>P/E</label>
-          <input type="text" ng-model="quote.PeRatio" required>
-        </md-input-container>
-
-        <md-input-container>
-          <label>P/B</label>
-          <input type="text" ng-model="quote.BookValue" required>
-        </md-input-container>
+        <div layout="column" flex="50">
+            {{quote.Name}} 
+        </div>
+        <div layout="column" flex="50">
+            {{quote.LastTradePrice | currency}}
+        </div>
     </div>
 
-    <md-input-container>
-        <label>Dividend</label>
-        <input type="text" ng-model="ratios.dividend" required>
-    </md-input-container>
+    <hr/>
 
-    <md-input-container>
-        <label>10yr. Average Revenue</label>
-        <input type="text" ng-model="ratios.revenuetenyr" required>
-    </md-input-container>
-
-    {{calculateBenGrahamPts()}}
-
-<!-- 
     <div layout="row">
-        <md-input-container>
-            <label>+Income yrs.</label>
-            <input type="text" ng-model="ben.yrsPositiveIncome" required>
-        </md-input-container>
+        <div layout="column" flex="50">
+            Market Cap
+        </div>
+        <div layout="column" flex="50">
+            {{quote.MarketCapitalization}}
+        </div>
+    </div>
 
-        <md-input-container>
-            <label>Dividend yrs.</label>
-            <input type="text" ng-model="ben.yrsDividend" required>
-        </md-input-container>
+    <div layout="row">
+        <div layout="column" flex="50">
+            Annual Revenue (M)
+        </div>
+        <div layout="column" flex="50">
+            {{ratios.revenue*100000 | currency:"$":0}}
+        </div>
+    </div>
 
-        <md-input-container>
-            <label>Growth yrs.</label>
-            <input type="text" ng-model="ben.yrsGrowth" required>
-        </md-input-container>
-    </div> -->
+    <div layout="row">
+        <div layout="column" flex="50">
+            Current Ratio
+        </div>
+        <div layout="column" flex="50">
+            {{ratios.currentRatio}}
+        </div>
+    </div>
 
-<!--     <md-button class="md-raised md-primary" ng-click="calculate()">Calculate</md-button> -->
-</ng-form>
+    <div layout="row">
+        <div layout="column" flex="50">
+            Long-term Debt Coverage Ratio
+        </div>
+        <div layout="column" flex="50">
+            {{ratios.longTermDebtCoverageRatio | number:2}}
+        </div>
+    </div>
 
+    <div layout="row">
+        <div layout="column" flex="50">
+            P/E
+        </div>
+        <div layout="column" flex="50">
+            {{quote.PeRatio}}
+        </div>
+    </div>
+
+    <div layout="row">
+        <div layout="column" flex="50">
+            Book Value/Share
+        </div>
+        <div layout="column" flex="50">
+            {{quote.priceToBook | number:2}}
+        </div>
+    </div>
+
+    <div layout="row">
+        <div layout="column" flex="50">
+            Years of dividend
+        </div>
+        <div layout="column" flex="50">
+            {{ratios.dividendTotal}}
+        </div>
+    </div>
+
+    <div layout="row">
+        <div layout="column" flex="50">
+            Dividend Annual Total $
+        </div>
+        <div layout="column" flex="50">
+            {{ratios.dividend}}
+        </div>
+    </div>
+
+    <div layout="row">
+        <div layout="column" flex="50">
+            10yr. Average Revenue
+        </div>
+        <div layout="column" flex="50">
+            {{ratios.revenuetenyr}}
+        </div>
+    </div>
+
+    <div layout="row">
+        <div layout="column" flex="50">
+            Years of positive income
+        </div>
+        <div layout="column" flex="50">
+            {{ratios.netincome}}
+        </div>
+    </div>
+
+    <hr/>
+
+    Total Points = {{calculatepts()}}
 </div>
 </md-content>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<!-- Angular Material Dependencies -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<!-- Angular Material Dependencies -->
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="bower_components/angular-aria/angular-aria.min.js"></script>
+<script src="bower_components/angular-messages/angular-messages.min.js"></script>
+<script src="bower_components/angular-material/angular-material.min.js"></script>
+
 <script src="app.js"></script>
+
 </body>
 </html>
