--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="wsi">
 <head>
-  <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="bgcalc.css">
+  
 
   <meta name="viewport" content="initial-scale=1" />
 </head>
@@ -11,19 +13,22 @@
 
 <md-content class="md-padding" ng-controller="WsiCtrl">
 
-<h2>Stock Ratios</h2>
-<div layout="column" style="min-width:400px;">
+<h1>WSI Stock Selector</h1>
+<h2>A Calulator of sorts</h2>
+<div layout="column">
     <div layout="row">
-        <ng-form name="benForm" layout="column">
-
+        <ng-form name="benForm">
             <md-input-container>
               <label>Stock Ticker</label>
               <input type="text" ng-model="ben.ticker" name="ticker" required>
             </md-input-container>
-
-            <md-button class="md-raised md-primary" ng-click="getCompanyData()" ng-disabled="benForm.ticker.$invalid">Get Ticker Data</md-button>
         </ng-form>
     </div>
+
+    <div layout="row">
+        <md-button class="md-raised md-primary" ng-click="getCompanyData()" ng-disabled="benForm.ticker.$invalid">Get Ticker Data</md-button>
+    </div>
+    
 
     <div layout="row">
         <div layout="column" flex="50">
@@ -34,7 +39,9 @@
         </div>
     </div>
 
-    <hr/>
+    <div layout="row">
+        <hr width="100%" />
+    </div>
 
     <div layout="row">
         <div layout="column" flex="50">
@@ -49,25 +56,25 @@
         <div layout="column" flex="50">
             Annual Revenue (M)
         </div>
-        <div layout="column" flex="50">
+        <div layout="column" flex="50" ng-class="{'valid':isRevenueValid(), 'invalid':!isRevenueValid()}">
             {{ratios.revenue*100000 | currency:"$":0}}
         </div>
     </div>
 
     <div layout="row">
         <div layout="column" flex="50">
-            Current Ratio
+            Current Ratio*
         </div>
-        <div layout="column" flex="50">
+        <div layout="column" flex="50" ng-class="{'valid':isCurrentRatioValid(), 'invalid':!isCurrentRatioValid()}">
             {{ratios.currentRatio}}
         </div>
     </div>
 
     <div layout="row">
         <div layout="column" flex="50">
-            Long-term Debt Coverage Ratio
+            Long-term Debt Coverage Ratio*
         </div>
-        <div layout="column" flex="50">
+        <div layout="column" flex="50" ng-class="{'valid':isLongTermDebtCoverageRatioValid(), 'invalid':!isLongTermDebtCoverageRatioValid()}">
             {{ratios.longTermDebtCoverageRatio | number:2}}
         </div>
     </div>
@@ -76,7 +83,7 @@
         <div layout="column" flex="50">
             P/E
         </div>
-        <div layout="column" flex="50">
+        <div layout="column" flex="50" ng-class="{'valid':isPeRatioValid(), 'invalid':!isPeRatioValid()}">
             {{quote.PeRatio}}
         </div>
     </div>
@@ -85,7 +92,7 @@
         <div layout="column" flex="50">
             Book Value/Share
         </div>
-        <div layout="column" flex="50">
+        <div layout="column" flex="50" ng-class="{'valid':isPriceToBookValid(), 'invalid':!isPriceToBookValid()}">
             {{quote.priceToBook | number:2}}
         </div>
     </div>
@@ -94,11 +101,11 @@
         <div layout="column" flex="50">
             Years of dividend
         </div>
-        <div layout="column" flex="50">
+        <div layout="column" flex="50" ng-class="{'valid':isDividendTotalValid(), 'invalid':!isDividendTotalValid()}">
             {{ratios.dividendTotal}}
         </div>
     </div>
-
+<!-- 
     <div layout="row">
         <div layout="column" flex="50">
             Dividend Annual Total $
@@ -106,13 +113,13 @@
         <div layout="column" flex="50">
             {{ratios.dividend}}
         </div>
-    </div>
+    </div> -->
 
     <div layout="row">
         <div layout="column" flex="50">
             10yr. Average Revenue
         </div>
-        <div layout="column" flex="50">
+        <div layout="column" flex="50" ng-class="{'valid':isRevenueTenYrValid(), 'invalid':!isRevenueTenYrValid()}">
             {{ratios.revenuetenyr}}
         </div>
     </div>
@@ -121,14 +128,33 @@
         <div layout="column" flex="50">
             Years of positive income
         </div>
-        <div layout="column" flex="50">
+        <div layout="column" flex="50" ng-class="{'valid':isNetIncomeValid(), 'invalid':!isNetIncomeValid()}">
             {{ratios.netincome}}
         </div>
     </div>
 
-    <hr/>
+    <div layout="row">
+        <hr width="100%" />
+    </div>
 
-    Total Points = {{calculatepts()}}
+    <sub>
+        *Half point
+    </sub>
+
+    <div layout="row">
+        Total Points = {{calculatepts()}}
+    </div>
+
+    <div layout="row">
+        <hr width="100%" />
+    </div>
+<!-- 
+    <div layout="row" ng-show="previousLookups.length > 0">
+        <div layout="column">
+            {{previousLookups}}
+        </div>
+    </div> -->
+
 </div>
 </md-content>
 
