add gitignore and add some early templating for history

--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
     <div layout="row">
         <hr width="100%" />
     </div>
-<!-- 
+    
     <div layout="row" ng-show="previousLookups.length > 0">
         <div layout="column">
             {{previousLookups}}
         </div>
-    </div> -->
+    </div>
 
 </div>
 </md-content>
